Fixed bug by adding out of bounds to availableMoves

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ html,
 body {
   margin: 0;
   overflow-x: hidden;
+  background-color: rgb(70, 70, 70);
+  color: white;
 }
 
 * {
